--- a/Ansible-Playbooks/docker.yml
+++ b/Ansible-Playbooks/docker.yml
@@ -1,5 +1,5 @@
 - name: eks-worker-node
-  hosts: eks-nodes
+  hosts: eks_nodes
   remote_user: ec2-user
   become: yes
   tasks:
@@ -40,8 +40,6 @@
         update_cache: yes
       vars:
         packages:
-        - python3.8
-        - ansible
         - docker
 
     - name: Enable Docker CE service at startup
@@ -49,19 +47,6 @@
         name: docker
         state: started
         enabled: yes
-
-    - name: Upgrade pip3
-      shell: "python3.8 -m pip install pip --upgrade"
-
-    - name: Ensure Python pip packages are installed
-      pip:
-        name: "{{ packages }}"
-        executable: /usr/local/bin/pip3.8
-      vars:
-        packages:
-        - boto
-        - boto3
-        - docker-compose
 
     - name: adding ec2-user to docker group
       user:
