--- a/app-Jenkinsfile/Jenkinsfile
+++ b/app-Jenkinsfile/Jenkinsfile
@@ -27,52 +27,38 @@ pipeline {
       stage('Update-kubeconfig') {
             steps {
               
-               // withCredentials([[
-               //   $class: 'AmazonWebServicesCredentialsBinding',
-                //  credentialsId: "aws-credentials",
-                //  accessKeyVariable: 'AWS_ACCESS_KEY_ID',
-                //  secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
-                //  ]]) {
                   sh """
                   aws eks --region us-east-1 update-kubeconfig --name eks-cluster
                   """
                 }
 	    }
       }
+        
+
+
       stage('Deploy the App (CD)') {
             steps {
-              
-               // withCredentials([[
-               //   $class: 'AmazonWebServicesCredentialsBinding',
-                //  credentialsId: "aws-credentials",
-                //  accessKeyVariable: 'AWS_ACCESS_KEY_ID',
-                //  secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
-                //  ]]) {
+                {
 
                   sh """
-                  		cd app-k8s
-		        	kubectl -n app apply -f *
-                  	"""
-                 	sleep(time: 10, unit: "SECONDS")
-                }
+                  cd App-K8s
+		  kubectl -n app apply -f deployment.yaml
+                  kubectl -n app apply -f service.yaml
+                  """
+                 sleep(time: 10, unit: "SECONDS")
+		}
 	    }
-      }	//kubectl create namespace app
+                
+      }
+			//kubectl create namespace app
+
       stage('Return APP URL') {
           steps {
             
-             // withCredentials([[
-             //   $class: 'AmazonWebServicesCredentialsBinding',
-              //  credentialsId: "aws-credentials",
-              //  accessKeyVariable: 'AWS_ACCESS_KEY_ID',
-              //  secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
-              //  ]]) {
                 sh "aws elb describe-load-balancers | grep DNSName"
               
           
        }
             }
-      // }
-          //  }
+       }
 
-      // }       
-    
