--- a/Ansible-Playbooks/build-container.yml
+++ b/Ansible-Playbooks/build-container.yml
@@ -3,19 +3,19 @@
   hosts: localhost
   tasks:
     - name: stop running container
-      command: docker stop -v /var/run/docker.sock:/var/run/docker.sock bakehouse-app
+      command: docker stop bakehouse-app
       ignore_errors: yes
 
     - name: remove stopped container
-      command: docker rm -v /var/run/docker.sock:/var/run/docker.sock bakehouse-app
+      command: docker rm bakehouse-app
       ignore_errors: yes
 
     - name: remove used image
-      command: docker rmi -v /var/run/docker.sock:/var/run/docker.sock  0xze/bakehouse-app:latest
+      command: docker rmi 0xze/bakehouse-app:latest
       ignore_errors: yes
 
     - name: build docker image from Dockerfile
-      command: docker build -v /var/run/docker.sock:/var/run/docker.sock  -t 0xze/bakehouse-app:latest ../app
+      command: docker build -t 0xze/bakehouse-app:latest ../app
 
     - name: push image to dockerhub
-      command: docker push -v /var/run/docker.sock:/var/run/docker.sock  0xze/bakehouse-app:latest
+      command: docker push 0xze/bakehouse-app:latest
