--- a/app-Jenkinsfile/Jenkinsfile
+++ b/app-Jenkinsfile/Jenkinsfile
@@ -41,9 +41,9 @@ pipeline {
                 
 
                   sh """
-                  cd App-K8s
-		          kubectl -n app apply -f deployment.yaml
-                  kubectl -n app apply -f service.yaml
+                  	cd app-k8s
+		        kubectl -n app apply -f deployment.yaml
+                  	kubectl -n app apply -f service.yaml
                   """
                  sleep(time: 10, unit: "SECONDS")
 		}
