--- a/app-Jenkinsfile/Jenkinsfile
+++ b/app-Jenkinsfile/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
                 
 
                   sh """
-                  	cd app-k8s
+                  	//cd app-k8s
 		   	kubectl create namespace app
       			kubectl -n app apply -f bakehouse-app-deployment.yml
                   	kubectl -n app apply -f bakehouse-app-service.yml
